HW5+optional fix2